eclipse based strategy creation wizard
eclipse based config editor
new configuration manager
support custom order properties
generic symbology resolver
persist order and order status to database
report manager
weekly options
market-on-open, limit-on-open, market-on-close and limit-on-close
order completion event
order recovery
in-process exchange simulator

Version 2.1
new Instruments: Bond, Fund & Commodity
overhaul AlgoTrader Reference Data Manager (based on Grails)
RealTick Fix interface
Fix market data interface
Enable multiple concurrent market data streams
AlgoTrader Maven Archetype to generate new projects
embedded in-memory DataSource based on H2 database
Bloomberg Historical data and security retriever interface
BreakOut Example Strategy
allow broker specific parameters (e.g. commissions)
More flexibility on market data file naming
ManagementService: allow securityId, symbol, isin, bbgid, ric and conid for security definition
Switch from LIFO to average cost
East-to-Borrow list for stocks
overhaul Esper Engine management (EngineLocator, Engine, AbstractEngine and EngineImpl)
overhaul Spring Proxy generation
enable client specific code generation based on UML
3rd Party Library updates (Esper 4.11.0)

Version 2.0
Multi Account Handling
Bloomberg Market Data Interface
Level-Zero Cache
New Execution Algorithm Disbtributional
InteractiveBrokers Financial Advisors Handling over FIX
SABR Option Pricing Engine
Single-JVM Live-Trading Mode
Eclipse Colorer Integration
Support for Global Industry Classification Standard (GICS)
relate Component to Combination instead of Security
DocBook based documentation
add JavaDoc Comments
Client Expert Mode
3rd Party Library updates (Esper 4.9, Spring Framework 3.2.3, Spring Integration 2.2.4, Hibernate 3.6.10, etc.)

Version 1.12
Esper 4.8
use Spring Integration for Mail Reconciliation
Esper Threading
Hibernate Locking
Portfolio Value Restoring
OpenPositionCallback / ClosePositionCallback
Generic approach for Bars and Ticks
FIX: