@@ -157,7 +157,6 @@
     <beans profile="embeddedDataSource">
         <jdbc:embedded-database id="dataSource" type="H2">
             <jdbc:script location="classpath:/db/h2/h2.sql"/>
-            <jdbc:script location="classpath*:/h2/h2-*.sql"/>
             <jdbc:script location="classpath*:/db/h2/h2-*.sql"/>
         </jdbc:embedded-database>
     </beans>
